improve test coverage for Configuration